# rust-ec-poc

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  compose.yaml  init.md  memo.md  vscode_extensions.txt
.cursor/rules/: rust-poc-rules.mdc
docker/mysql/: my.cnf
docker/mysql/init/: 01_db.sql  02_create_tables.sql
management/: Cargo.toml
management/src/: application.rs  handlers.rs  lib.rs
management/src/adapters/repository/: customer_repository.rs
management/src/application/: usecase.rs
management/src/application/ports/: customer_repository.rs
management/src/application/usecase/: customer_usecase.rs
management/src/domain/: model.rs  repository.rs
management/src/domain/model/: customer.rs
management/src/domain/repository/: customer_repository.rs
management/src/handlers/: customer_handler.rs
migrations/: 20240320000001_create_customers.sql  20240320000002_create_products.sql
shop/: Cargo.toml
shop/src/: router.rs  state.rs
shop/src/application/ports/: stripe.rs
shop/src/application/usecase/: create_payment.rs
shop/src/domain/entities/: payment.rs
shop/src/handlers/: customer.rs
src/: adapters.rs  handlers.rs  main.rs  router.rs
src/adapters/: mod.rs  stripe_client.rs
src/adapters/stripe/: client.rs
src/application/: mod.rs
src/application/ports/: stripe.rs
src/application/usecase/: create_payment.rs  create_stripe_customer.rs  mod.rs
src/domain/: entities.rs
src/domain/entities/: mod.rs  stripe_customer.rs
src/handlers/: customer.rs  payment.rs
src/models/: payment.rs
