[package]
name = "rust-ec-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
hyper = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
aws-sdk-s3 = "1.65.0"
