[package]
name = "management"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.83"
thiserror = "2.0.11"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "mysql", "migrate"] }

[lib]
name = "management"
path = "src/lib.rs"